# pe-game-engine

./: Doxyfile  README.md  meson-post-install.py  meson.build
docs/html/: annotated.html  ball-object_8h_source.html  camera_8h_source.html  classBallObject-members.html  classBallObject.html  classCamera-members.html  classCamera.html  classDebugDrawer-members.html  classDebugDrawer.html  classGame-members.html  classGame.html  classGameObject-members.html  classGameObject.html  classMatch-members.html  classMatch.html  classMesh-members.html  classMesh.html  classModel-members.html  classModel.html  classMotionState-members.html  classMotionState.html  classPhysicObject-members.html  classPhysicObject.html  classPhysics-members.html  classPhysics.html  classPlayer-members.html  classPlayer.html  classPlayerObject-members.html  classPlayerObject.html  classRenderer-members.html  classRenderer.html  classResourceManager-members.html  classResourceManager.html  classShader-members.html  classShader.html  classSkybox-members.html  classSkybox.html  classTextRenderer-members.html  (+42 more)
src/: camera.cpp  camera.h  game.cpp  game.h  main.cpp  match.cpp  match.h  mesh.cpp  mesh.h  meson.build  model.h  player-object.cpp  player.cpp  player.h  renderer.cpp  resource-manager.cpp  shader.h  text-renderer.cpp  text-renderer.h  tournament.cpp  tournament.h
src/assets/models/ball/: ball1.blend  ball1.glb  ball1.mtl
src/assets/models/box/: box.blend  box.mtl
src/assets/models/court/: court.blend
src/assets/models/player/: male-01-nude.blend  male-01-nude.blend1  male-01-nude.dae
src/assets/models/stadium/: stadium.blend  stadium.blend1
src/engine/: actor.cpp  actor.h  ball-object.cpp  ball-object.h  camera.cpp  camera.h  debug-drawer.cpp  debug-drawer.h  engine.cpp  engine.h  game-object.cpp  game-object.h  glad.c  global.h  mesh.cpp  mesh.h  meson.build  model.cpp  model.h  motion-state.h  physic-object.cpp  physic-object.h  physics.cpp  physics.h  player-object.cpp  player-object.h  renderer.cpp  renderer.h  resource-manager.cpp  resource-manager.h  scene-renderer.cpp  scene-renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  text-renderer.cpp  text-renderer.h
src/glad/: glad.h
src/models/ball/: ball.blend  ball.mtl
src/models/box/: box.blend1
src/models/court/: court.blend  court.blend1  court.mtl
src/models/player/: male-01-nude.glb  player.dae
src/models/stadium/: stadium.mtl
src/shaders/: animation.vs  colors.fs  colors.vs  default.fs  default.vs  lightsource.fs  shadow_mapping_depth.fs  shadow_mapping_depth.vs  skybox.fs  skybox.vs  text.fs  text.vs
(+57 files in other folders)
