sources += files(
    'ball-object.cpp',
    'camera.cpp',
    'debug-drawer.cpp',
    'game-object.cpp',
    'physic-object.cpp',
    'physics.cpp',
    'player-object.cpp',
    'mesh.cpp',
    'model.cpp',
    'renderer.cpp',
    'resource-manager.cpp',
    'shader.cpp',
    'skybox.cpp',
    'text-renderer.cpp',
    'glad.c',
)
