sources += files(
    'camera.cpp',
    'debug-drawer.cpp',
    'engine.cpp',
    'actor.cpp',
    'physics.cpp',
#    'player-object.cpp',
    'mesh.cpp',
    'model.cpp',
    'scene-renderer.cpp',
    'resource-manager.cpp',
    'scene.cpp',
    'shader.cpp',
    'skybox.cpp',
    'text-renderer.cpp',
    'glad.c',
)
